--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# I  contributed to the hbnb project in this repository 
 
-Steven Garcia <steven.garcia@holbertonschool.com>
-Binita Rai <binita.rai@holbertonschool.com>
-Adriel Tolentino <adriel_tolentino@outlook.com>
-Melissa Ng <melissa.ng@holbertonschool.com>
+Hafida Belayd
+Belbouk Ayyoub
